Thu May 17 16:20:04 2001  Jonathan Blandford  <jrb@redhat.com>

	* demos/gtk-demo/main.c (fontify): It's the worlds ugliest
	highlighting code!!!!  The result is okay so long as you don't try
	to stress it.  It also highlights a bug in the TextView so it's in
	an unproportional font right now until it's fixed.

	*demos/gtk-demo/*.c: Clean up code a bit to make it
	ugly-parser(TM) friendly. (-:

2001-05-17  Joe Shaw  <joe@ximian.com>

	* gtk/gtktextdisplay.c (gtk_text_layout_draw): Remove the assertions
	that x_offset and y_offset must be >= 0. Clip the cursor being drawn
	if it is only partially onscreen.

Thu May 17 17:10:13 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.c: Make logical motion and deletion by graphemes, 
	not by characters.

	* gtk/gtkentry.c: Handle "trailing" returns from Pango when they
	are not zero or one; that is, when graphemes of multiple characters
	are involved.

	* gtk/gtktextlayout.c (line_display_index_to_iter): Remove unnecessary
	FIXME.

2001-05-17  Alexander Larsson  <alla@lysator.liu.se>
	
	* gtk/gtkbbox.c:
	Add properties, based on patch by Lee Mallabone.

	* gtk/gtknotebook.c:
	* gtk/gtktoolbar.c:
	Convert from GtkArg to GParam, based on patch by John Margaglione.
	
	* gtk/gtkhscale.c:
	* gtk/gtkvscale.c:
	* gtk/gtkhscrollbar.c:
	* gtk/gtkvscrollbar.c:
	* gtk/gtkrange.c:
	Move adjustment property to GtkRange.

	* gtk/gtklabel.c:
	Setup mnemonics on property changes

	* gtk/gtkwidget.c (gtk_widget_get_property):
	GdkExtensionMode is an enum, not a flag. Set it with
	g_value_set_enum ().

	* tests/prop-editor.c:
	Better propery editor.

	* tests/testgtk.c:
	Add new property test. Pass zero to the property editor to
	get properties from all derived types.
	
Sun May 13 12:01:12 2001  Owen Taylor  <otaylor@redhat.com>

	* autogen.sh (have_automake): Require libtool-1.4,
	automake-1.4p1.

	* acinclude.m4: Remove libtool macros.

	* gdk-pixbuf/Makefile.am: Add dependencies to loade
	modules.
