@@ -63,12 +63,12 @@ struct _GtkImageMenuItemClass
 
 
 GtkType	   gtk_image_menu_item_get_type       (void) G_GNUC_CONST;
-GtkWidget* gtk_image_menu_item_new            (GtkWidget        *widget,
-					       const gchar      *label);
+GtkWidget* gtk_image_menu_item_new            (void);
+GtkWidget* gtk_image_menu_item_new_with_label (const gchar      *label);
 GtkWidget* gtk_image_menu_item_new_from_stock (const gchar      *stock_id,
 					       GtkAccelGroup    *accel_group);
-void       gtk_image_menu_item_add_image      (GtkImageMenuItem *image_menu_item,
-					       GtkWidget        *child);
+void       gtk_image_menu_item_set_image      (GtkImageMenuItem *image_menu_item,
+					       GtkWidget        *image);
 GtkWidget* gtk_image_menu_item_get_image      (GtkImageMenuItem *image_menu_item);
 
 #ifdef __cplusplus
