@@ -1242,7 +1242,7 @@ gtk_item_factory_create_item (GtkItemFactory	     *ifactory,
 	image = gtk_image_new_from_pixbuf (pixbuf);
 
       if (image)
-	gtk_image_menu_item_add_image (GTK_IMAGE_MENU_ITEM (widget), image);
+	gtk_image_menu_item_set_image (GTK_IMAGE_MENU_ITEM (widget), image);
 
       if (pixbuf)
 	g_object_unref (G_OBJECT (pixbuf));
@@ -1251,7 +1251,7 @@ gtk_item_factory_create_item (GtkItemFactory	     *ifactory,
     {
       image = gtk_image_new_from_stock (entry->extra_data, GTK_ICON_SIZE_MENU);
       if (image)
-	gtk_image_menu_item_add_image (GTK_IMAGE_MENU_ITEM (widget), image);
+	gtk_image_menu_item_set_image (GTK_IMAGE_MENU_ITEM (widget), image);
       
       if (gtk_stock_lookup (entry->extra_data, &stock_item))
 	{
